# hypr-claw

./: .gitignore  ARCHITECTURE_RESTRUCTURE.md  ARCHITECTURE_REWRITE_PLAN.md  BOOTSTRAP_IMPLEMENTATION.md  CHANGES.md  CODEX_INTEGRATION_COMPLETE.md  CODEX_INTEGRATION_PLAN.md  CODEX_INTEGRATION_SUMMARY.md  CONTEXT_MANAGEMENT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DELIVERABLES.md  DIRECTORY_STRUCTURE.md  GOOGLE_GEMINI_IMPLEMENTATION.md  HARDENING_SUMMARY.md  HONEST_STATUS_ASSESSMENT.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_STATUS.md  LICENSE  NVIDIA_404_FIX.md  PERFORMANCE_ANALYSIS.md  PHASES_4_10_STATUS.md  PHASE_1_3_COMPLETE.md  PHASE_1_3_STATUS.md  PHASE_4_6_COMPLETE.md  PRODUCTION_READY.md  QUICKSTART.md  QUICKSTART_PROVIDER.md  README.md  REPL_INTEGRATION_COMPLETE.md  RESTRUCTURE_PROGRESS.md  SCAN_PROGRESS.md  SUMMARY.md  TERMINAL_AGENT.md  TOOL_PIPELINE_HARDENING_COMPLETE.md  VERIFICATION_CHECKLIST.md  add_json_imports.py  update_mocks.sh  update_tool_registry_mocks.py  (+2 more)
data/: .master_key  config.yaml
docs/: AGENT_LOOP.md  ARCHITECTURE.md  MEMORY_SYSTEM.md  PRODUCTION_TESTING.md  README.md  ROADMAP.md  SECURITY_MODEL.md
happy/: fibonacci.py
hypr-claw-app/: Cargo.toml
hypr-claw-app/examples/: test_yaml.rs
hypr-claw-app/src/: bootstrap.rs  config.rs  main.rs  repl.rs  tui.rs
hypr-claw-app/src/commands/: run.rs
hypr-claw-app/src/scan/: classifier.rs  file_classifier.rs  integration.rs  mod.rs  policy.rs  progress.rs  resource.rs  scanner.rs
hypr-claw-app/src/scan/parsers/: git.rs  hyprland.rs  mod.rs  shell.rs
hypr-claw-app/tests/: integration_test.rs  session_persistence_test.rs  test_bootstrap.rs  test_config.rs  test_config_parsing.rs  test_integration_workflow.rs  test_scan_integration.rs
hypr-claw-runtime/: Cargo.toml
hypr-claw-tools/: Cargo.toml
souls/: arch_maintainer.yaml  automation_agent.yaml  background_runner.yaml  browser_researcher.yaml  bug_hunter.yaml  cleanup_agent.yaml  code_reviewer.yaml  coder_engineer.yaml  communication_assistant.yaml  content_writer.yaml  data_analyst.yaml  devops_operator.yaml  documentation_writer.yaml  focus_coach.yaml  git_assistant.yaml  hyprland_operator.yaml  learning_coach.yaml  (+19 more)
(+161 files in other folders)
