[workspace]
members = [
    "hypr-claw-runtime",
    "hypr-claw-tools",
    "hypr-claw-infra",
    "hypr-claw-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hypr-Claw Team"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
