[package]
name = "hypr-claw-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hypr-claw"
path = "src/main.rs"

[dependencies]
hypr_claw = { path = "../hypr-claw-infra" }
hypr_claw_tools = { path = "../hypr-claw-tools" }
hypr-claw-runtime = { path = "../hypr-claw-runtime" }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"

[features]
mock-llm = []
