[package]
name = "hypr-claw-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hypr-claw"
path = "src/main.rs"

[dependencies]
hypr_claw = { path = "../hypr-claw-infra" }
hypr_claw_tools = { path = "../hypr-claw-tools" }
hypr-claw-runtime = { path = "../hypr-claw-runtime" }
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
