[package]
name = "hypr-claw-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "hypr_claw_app"
path = "src/lib.rs"

[[bin]]
name = "hypr-claw"
path = "src/main.rs"

[dependencies]
hypr_claw = { path = "../hypr-claw-infra" }
hypr_claw_tools = { path = "../hypr-claw-tools" }
hypr-claw-runtime = { path = "../hypr-claw-runtime" }
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
rpassword = "7.3"
rand = "0.8"

[dev-dependencies]
parking_lot = "0.12"
